syntax = "proto3";
package models;

option go_package = "github.com/willH0lt/sketch-paper/examples/crayon.town/backend/shared/models";

message DrawSegment {
  sint32 tileX = 1;
  sint32 tileY = 2;
  sint32 startX = 3;
  sint32 startY = 4;
  sint32 endX = 5;
  sint32 endY = 6;
  uint32 red = 7;
  uint32 green = 8;
  uint32 blue = 9;
  uint32 alpha = 10;
  uint32 size = 11;
  uint32 kind = 12;
  double runningLength = 13;
}

message Stroke {
  repeated DrawSegment segments = 1;
}
